--- a/_cases/2024/DIVD-2024-00003.md
+++ b/_cases/2024/DIVD-2024-00003.md
@@ -34,7 +34,7 @@ timeline:
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
 ## Summary
-CVE-2023-43177 is a critical vulnerability in CrushFTP. The vulnerability could potentially allow unauthenticated attackers with network access to the CrushFTP Instance to write files in the local file system and eventually in some versions could allow the executing of arbitrary system commands. 
+{% cve CVE-2023-43177 %} is a critical vulnerability in CrushFTP. The vulnerability could potentially allow unauthenticated attackers with network access to the CrushFTP Instance to write files in the local file system and eventually in some versions could allow the executing of arbitrary system commands. 
 
 ## What you can do
 Given that there is active exploitation, it is crucial the provided mitigation is applied as soon as possible. It is also recommended to check the appliance for signs of previous exploitation. Upgrade CrushFTP to version 10.6.0 or higher. 
