--- a/_cases/2024/DIVD-2024-00003.md
+++ b/_cases/2024/DIVD-2024-00003.md
@@ -1,7 +1,7 @@
 ---
 layout: case  
 title: "Unauthenticaded Remote Code Execution in CrushFTP"
-excerpt: "CrushFTP versions 10.5.5 and lower are vulnerable for an unauthenticated remote code execution vulnerability"
+excerpt: "CrushFTP versions prior to 10.5.1 are vulnerable for an unauthenticated remote code execution vulnerability"
 author: Alwin Warringa
 lead: Alwin Warringa
 researchers:
@@ -11,7 +11,7 @@ cves:
 - CVE-2023-43177
 product: 
 - CrushFTP
-versions: all versions lower than 10.5.5
+versions: all versions prior to 10.5.1
 recommendation: "Upgrade to patched versions stated on CrushFTP website"
 patch_status: "Patch available"
 workaround: "Restrict access to the webinterface of CrushFTP."
@@ -36,8 +36,8 @@ timeline:
 ## Summary
 {% cve CVE-2023-43177 %} is a critical vulnerability in CrushFTP. The vulnerability could potentially allow unauthenticated attackers with network access to the CrushFTP Instance to write files in the local file system and eventually in some versions could allow the executing of arbitrary system commands. 
 
-## What you can do
-Given that there is active exploitation, it is crucial the provided mitigation is applied as soon as possible. It is also recommended to check the appliance for signs of previous exploitation. Upgrade CrushFTP to version 10.6.0 or higher. 
+## Recommendations
+CrushFTP recommends users to update their CrushFTP software to version 10.5.1 or later as soon as possible. 
 
 ## What we are doing
 DIVD has identified vulnerable systems and will notify owners of vulnerable systems. DIVD is also informing trusted information sharing partners for targeted notifications.
