--- a/_cases/2024/DIVD-2024-00010.md
+++ b/_cases/2024/DIVD-2024-00010.md
@@ -32,7 +32,10 @@ timeline:
 - start: 2024-03-22
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
-#ips: 
+- start: 2024-03-23
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
+#ips: 88
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 
