Fix all person urls in a single place

--- a/_cases/2023/DIVD-2023-00037.md
+++ b/_cases/2023/DIVD-2023-00037.md
@@ -16,7 +16,7 @@ versions:
 recommendation: Upgrade by installing the issued patch as soon as possible or apply the mentioned workaround.
 patch_status: patches available
 workaround: Enable Browser API Access and disable 'MINIO_BROWSER'
-status: Close
+status: Closed
 start: 2023-09-26
 end: 
 timeline:
