--- a/_cases/2024/DIVD-2024-00001.md
+++ b/_cases/2024/DIVD-2024-00001.md
@@ -23,7 +23,7 @@ versions:
 recommendation: "While the patch is under development, apply Ivanti’s mitigation, or take the appliance offline."
 patch_status: Under development
 workaround: Import the mitigation file mitigation.release.20240107.1.xml provided by Ivanti in the download portal or take the device offline.
-status : open
+status : Open
 start: 2024-01-10
 end: 
 timeline:
