--- a/_cases/2024/DIVD-2024-00002.md
+++ b/_cases/2024/DIVD-2024-00002.md
@@ -25,7 +25,7 @@ versions:
 recommendation: "Patch your Gitlab instance to the non vulnerable version"
 patch_status: Released
 
-status : open
+status : Open
 start: 2024-01-12
 end: 
 timeline:
