--- a/_cases/2024/DIVD-2024-00003.md
+++ b/_cases/2024/DIVD-2024-00003.md
@@ -15,7 +15,7 @@ versions: all versions prior to 10.5.1
 recommendation: "Upgrade to patched versions stated on CrushFTP website"
 patch_status: "Patch available"
 workaround: "Restrict access to the webinterface of CrushFTP."
-status : open
+status : Open
 start: 2023-12-13
 end: 
 timeline:
