--- a/_cases/2024/DIVD-2024-00005.md
+++ b/_cases/2024/DIVD-2024-00005.md
@@ -23,7 +23,7 @@ versions:
 recommendation: "Update your devices to a patched version as soon as possible"
 patch_status: Released
 workaround: None
-status : open
+status : Open
 start: 2024-02-08
 end: 
 timeline:
