--- a/_cases/2024/DIVD-2024-00008.md
+++ b/_cases/2024/DIVD-2024-00008.md
@@ -16,7 +16,7 @@ versions:
 - ScreenConnect 23.9.7 and prior.
 recommendation: "ConnectWise recommends partners to update their ScreenConnect to version 23.9.8."
 patch_status: Released
-status : open
+status : Open
 start: 2024-02-21
 end: 
 timeline:
