--- a/_cases/2024/DIVD-2024-00009.md
+++ b/_cases/2024/DIVD-2024-00009.md
@@ -17,7 +17,7 @@ versions:
 recommendation: "Upgrade to the latest available version as soon as possible or apply the provided security patch"
 patch_status: Released
 workaround: Install the JetBrains-provided security patch.
-status : open
+status : Open
 start: 2024-03-06
 end: 
 timeline:
