--- a/_cases/2024/DIVD-2024-00010.md
+++ b/_cases/2024/DIVD-2024-00010.md
@@ -16,7 +16,7 @@ versions:
 - All Kemp LoadMaster releases after 7.2.48.1
 recommendation: "Apply the provided security patch as soon as possible"
 patch_status: Released
-status : open
+status : Open
 start: 2024-03-20
 end: 
 timeline:
