did rescan and closed 00045, 00042

--- a/_cases/2023/DIVD-2023-00042.md
+++ b/_cases/2023/DIVD-2023-00042.md
@@ -1,6 +1,7 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well    
+ips: n/a
 title: "Confluence improper authorization vulnerability"
 excerpt: "Confluence Data Center and Server allow unauthorized users to set Confluence in setup mode leading to the possibility to create administrator accounts that have the capabilities for RCE"
 author: Wessel Baltus
@@ -19,9 +20,9 @@ versions:
 recommendation: "Upgrade to patched versions stated on atlassian website"
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-11-11
-end: 
+end: 2024-04-14
 timeline:
 - start: 2023-10-31
   end:
@@ -35,6 +36,9 @@ timeline:
 - start: 2023-11-22
   end:
   event: "First version of this case file"
+- start: 2023-12-14
+  end:
+  event: "Because of overlap merged with DIVD-2023-00045"
 #ips: 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
