--- a/_cases/2023/DIVD-2023-00045.md
+++ b/_cases/2023/DIVD-2023-00045.md
@@ -1,6 +1,7 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well    
+ips: 1032
 title: "Confluence RCE Vulnerability In Confluence Data Center and Confluence Server"
 excerpt: "Confluence Data Center and Server RCE vulnerability allow an authorized user, including one with anonymous access, to inject unsafe user input into a Confluence page"
 author: Wessel Baltus
@@ -22,7 +23,7 @@ patch_status: Fully patched
 #workaround: n/a
 status : Open
 start: 2023-12-05
-end: 
+end: 2024-04-14 
 timeline:
 - start: 2023-12-05
   end:
@@ -38,7 +39,13 @@ timeline:
   event: "First version of this case file"
 - start: 2023-12-20
   end:
-  event: "DIVD identified vulnerable devices" 
+  event: "DIVD identified vulnerable devices"
+- start: 2023-12-20
+  end:
+  event: "DIVD send out first mailrun"
+- start: 2024-04-14
+  end:
+  event: "DIVD did rescan and closed case" 
 #ips: 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
