fixed case close 00045

--- a/_cases/2023/DIVD-2023-00045.md
+++ b/_cases/2023/DIVD-2023-00045.md
@@ -21,7 +21,7 @@ versions:
 recommendation: "Upgrade to patched versions stated on Atlassian website"
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-12-05
 end: 2024-04-14 
 timeline:
