--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -38,7 +38,7 @@ timeline:
 - start: 2024-04-18
   end:
   event: "Case opened, first version of this casefile"
-#ips: 55000 +-
+#ips: 0
 
 ---
 ## Summary
@@ -52,29 +52,29 @@ Palo Alto Networks is aware of attacks exploiting this vulnerability.
 Palo Alto Networks recommends to upgrade to a version where the issue is fixed. Palo Alto has released the following versions and is planning to release the others by the ETA date:
 
 PAN-OS 10.2:
-* 10.2.9-h1 (Released 4/14/24)
-* 10.2.8-h3 (Released 4/15/24)
-* 10.2.7-h8 (Released 4/15/24)
-* 10.2.6-h3 (Released 4/16/24)
-* 10.2.5-h6 (Released 4/16/24)
-* 10.2.3-h13 (ETA: 4/18/24)
-* 10.2.1-h2 (ETA: 4/18/24)
-* 10.2.2-h5 (ETA: 4/18/24)
-* 10.2.0-h3 (ETA: 4/18/24)
-* 10.2.4-h16 (ETA: 4/19/24)
+* 10.2.9-h1 (Released 14 Apr 2024)
+* 10.2.8-h3 (Released 15 Apr 2024)
+* 10.2.7-h8 (Released 15 Apr 2024)
+* 10.2.6-h3 (Released 16 Apr 2024)
+* 10.2.5-h6 (Released 16 Apr 2024)
+* 10.2.3-h13 (ETA: 18 Apr 2024)
+* 10.2.1-h2 (ETA: 18 Apr 2024)
+* 10.2.2-h5 (ETA: 18 Apr 2024)
+* 10.2.0-h3 (ETA: 18 Apr 2024)
+* 10.2.4-h16 (ETA: 19 Apr 2024)
 
 PAN-OS 11.0:
-* 11.0.4-h1 (Released 4/14/24)
-* 11.0.4-h2 (Released 4/17/24)
-* 11.0.3-h10 (Released 4/16/24)
-* 11.0.2-h4 (Released 4/16/24)
-* 11.0.1-h4 (ETA: 4/18/24)
-* 11.0.0-h3 (ETA: 4/18/24)
+* 11.0.4-h1 (Released 14 Apr 2024)
+* 11.0.4-h2 (Released 17 Apr 2024)
+* 11.0.3-h10 (Released 16 Apr 2024)
+* 11.0.2-h4 (Released 16 Apr 2024)
+* 11.0.1-h4 (ETA: 18 Apr 2024)
+* 11.0.0-h3 (ETA: 18 Apr 2024)
 
 PAN-OS 11.1:
-* 11.1.2-h3 (Released 4/14/24)
-* 11.1.1-h1 (Released 4/16/24)
-* 11.1.0-h3 (Released 4/16/24)
+* 11.1.2-h3 (Released 14 Apr 2024)
+* 11.1.1-h1 (Released 16 Apr 2024)
+* 11.1.0-h3 (Released 16 Apr 2024)
 
 ## Mitigation
 
