--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -43,7 +43,7 @@ timeline:
 ---
 ## Summary
 
-A command injection vulnerability has been discovered in the GlobalProtect of PAN-OS, allowing unauthenticated malicious actors to exploit it to execute arbitrary commands on the system with root privileges. pAN-OS is the operating system of Palo Alto Firewalls. 
+A command injection vulnerability has been discovered in the GlobalProtect of PAN-OS, allowing unauthenticated malicious actors to exploit it to execute arbitrary commands on the system with root privileges. PAN-OS is the operating system of Palo Alto Firewalls. 
 
 Palo Alto Networks is aware of attacks exploiting this vulnerability.
 
