--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -57,19 +57,19 @@ PAN-OS 10.2:
 * 10.2.7-h8 (Released 15 Apr 2024)
 * 10.2.6-h3 (Released 16 Apr 2024)
 * 10.2.5-h6 (Released 16 Apr 2024)
-* 10.2.3-h13 (ETA: 18 Apr 2024)
-* 10.2.1-h2 (ETA: 18 Apr 2024)
-* 10.2.2-h5 (ETA: 18 Apr 2024)
-* 10.2.0-h3 (ETA: 18 Apr 2024)
-* 10.2.4-h16 (ETA: 19 Apr 2024)
+* 10.2.3-h13 (Released 18 Apr 2024)
+* 10.2.1-h2 (Released 18 Apr 2024)
+* 10.2.2-h5 (Released 18 Apr 2024)
+* 10.2.0-h3 (Released 18 Apr 2024)
+* 10.2.4-h16 (Released 18 Apr 2024)
 
 PAN-OS 11.0:
 * 11.0.4-h1 (Released 14 Apr 2024)
 * 11.0.4-h2 (Released 17 Apr 2024)
 * 11.0.3-h10 (Released 16 Apr 2024)
 * 11.0.2-h4 (Released 16 Apr 2024)
-* 11.0.1-h4 (ETA: 18 Apr 2024)
-* 11.0.0-h3 (ETA: 18 Apr 2024)
+* 11.0.1-h4 (Released 18 Apr 2024)
+* 11.0.0-h3 (Released 18 Apr 2024)
 
 PAN-OS 11.1:
 * 11.1.2-h3 (Released 14 Apr 2024)
@@ -78,7 +78,7 @@ PAN-OS 11.1:
 
 ## Mitigation
 
-When a version is not available for you yet and you have a Threat Prevention subscription with Palo Alto, you can block attacks using Threat IDs 95187, 95189, and 95191 (available in Applications and Threats content version 8836-8695 and later).
+When a upgrading is not suitable for you for you and you have a Threat Prevention subscription with Palo Alto, you can block attacks using Threat IDs 95187, 95189, and 95191 (available in Applications and Threats content version 8836-8695 and later).
 
 ## What we are doing
 
