Removed ETA from recommedations.

--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -49,7 +49,7 @@ Palo Alto Networks is aware of attacks exploiting this vulnerability.
 
 ## Recommendations
 
-Palo Alto Networks recommends to upgrade to a version where the issue is fixed. Palo Alto has released the following versions and is planning to release the others by the ETA date:
+Palo Alto Networks recommends to upgrade to a version where the issue is fixed. Palo Alto has released the following versions:
 
 PAN-OS 10.2:
 * 10.2.9-h1 (Released 14 Apr 2024)
