--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -38,6 +38,9 @@ timeline:
 - start: 2024-04-18
   end:
   event: "Case opened, first version of this casefile"
+- start: 2024-04-19
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
 #ips: 0
 
 ---
