--- a/_cases/2023/DIVD-2023-00011.md
+++ b/_cases/2023/DIVD-2023-00011.md
@@ -29,7 +29,7 @@ versions:
 
 recommendation: "For FortiNAC, upgrade to 9.4.1 and later, 9.2.6 and later, 9.1.8 and later and 7.2.0 and later. For FortiWeb, upgrade to 7.0 or later, 6.3.17 or later, 6.2.7 or later, 6.1.3 or later and 6.0.8 or later."
 start: 2023-02-03
-end:
+end: 2023-12-20
 timeline:
 - start: 2023-02-19
   end:
@@ -46,7 +46,7 @@ timeline:
 - start: 2023-12-20
   end:
   event: "Case closed."
-ips: 0
+ips: n/a
 ---
 
 ## Summary
