--- a/_cases/2024/DIVD-2024-00010.md
+++ b/_cases/2024/DIVD-2024-00010.md
@@ -16,9 +16,9 @@ versions:
 - All Kemp LoadMaster releases after 7.2.48.1
 recommendation: "Apply the provided security patch as soon as possible"
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-03-20
-end: 
+end: 2024-04-23
 timeline:
 - start: 2024-03-20
   end:
@@ -35,7 +35,13 @@ timeline:
 - start: 2024-03-23
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
-#ips: 88
+- start: 2024-04-23
+  end:
+  event: "Second round of notifications sent"
+- start: 2024-04-23
+  end:
+  event: "Case closed."
+ips: 109
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 
