--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -41,7 +41,10 @@ timeline:
 - start: 2024-04-19
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
-#ips: 0
+- start: 2024-04-23
+  end:
+  event: "DIVD closes the case. This vulnerability is scanned by more parties."
+ips: 55576
 
 ---
 ## Summary
