few changes to keep the arcticwolf blog

--- a/_cases/2024/DIVD-2024-00014.md
+++ b/_cases/2024/DIVD-2024-00014.md
@@ -47,7 +47,7 @@ timeline:
 ---
 ## Summary
 
-A set of remote code execution vulnerabilities was reported for Qlik Sense in 2023. DIVD is rescanning previously known vulnerable instances in an effort to increase patch rates. Not patching the device might result in a compromised Qlik Sense, which in turn could result in attacks such as leaked data or ransomware as described in a [blog by Arctic Wolf](https://cyberveilignederland.nl/actueel/persbericht-samenwerkingsverband-melissa-vindt-diverse-nederlandse-slachtoffers-van-ransomwaregroepering-cactus).
+A set of remote code execution vulnerabilities was reported for Qlik Sense in 2023. DIVD is rescanning previously known vulnerable instances in an effort to increase patch rates. Not patching the device might result in a compromised Qlik Sense, which in turn could result in attacks such as leaked data or ransomware as described in a [blog by Arctic Wolf](https://arcticwolf.com/resources/blog/qlik-sense-exploited-in-cactus-ransomware-campaign/) and a [press release by project Melissa](https://cyberveilignederland.nl/actueel/persbericht-samenwerkingsverband-melissa-vindt-diverse-nederlandse-slachtoffers-van-ransomwaregroepering-cactus).
 
 DIVD is running this case in collaboration with [Project Melissa](https://www.ncsc.nl/actueel/nieuws/2023/oktober/3/melissa-samenwerkingsverband-ransomwarebestrijding) in which various Dutch cyber security companies collaborate to make The Netherlands less attractive for ransomware gangs. From combined research between [Fox-IT](https://blog.fox-it.com/2024/04/25/sifting-through-the-spines-identifying-potential-cactus-ransomware-victims/), [Northwave](https://northwave-cybersecurity.com/), [Responders BV](https://www.responders.nu/) and [ESET Netherlands](https://www.eset.com/nl/) it has been identified that vulnerable Qlik Sense instances are used to compromise corporate environments and install ransomware.
 
