--- a/_cases/2024/DIVD-2024-00014.md
+++ b/_cases/2024/DIVD-2024-00014.md
@@ -78,4 +78,4 @@ DIVD is currently identifying vulnerable instances and notifying the owners of t
 * [Arctic Wolf Advisory](https://arcticwolf.com/resources/blog/cve-2023-41265-cve-2023-41266-cve-2023-48365/)
 * [Qlik Advisory](https://community.qlik.com/t5/Official-Support-Articles/Critical-Security-fixes-for-Qlik-Sense-Enterprise-for-Windows/ta-p/2120325)
 * [Praetorian Blog](https://www.praetorian.com/blog/doubleqlik-bypassing-the-original-fix-for-cve-2023-41265/)
-* [Porject Melissa Blog](https://cyberveilignederland.nl/actueel/persbericht-samenwerkingsverband-melissa-vindt-diverse-nederlandse-slachtoffers-van-ransomwaregroepering-cactus)
+* [Project Melissa Blog](https://cyberveilignederland.nl/actueel/persbericht-samenwerkingsverband-melissa-vindt-diverse-nederlandse-slachtoffers-van-ransomwaregroepering-cactus)
