Fix the layout of blog page and add exceprt to Melissa post

--- a/_cases/2022/DIVD-2022-00048.md
+++ b/_cases/2022/DIVD-2022-00048.md
@@ -4,7 +4,7 @@ title: "Dossier Energy Transition"
 excerpt: "In this dossier we are tracking cases and other findings related to the global energy transition"
 author: Frank Breedijk
 lead: Frank Breedijk
-status: Open
+status: Closed
 researchers:
 - Jelle Ursem
 #cves: n/a
@@ -29,12 +29,15 @@ timeline:
   event: Reported credentials for Sharepoint portal of Belgium grid operator leaked via GitHub. Credentials where quickly invalidated and repo has removed.
 - start: 2022-10-27
   event: Case file published
+- strart 2024-04-20
+  event: Closed case, experiment ended, will not repeat
 ips: n/a
 ---
 
 ## Summary
 
 The global energy transition is in full swing. It leads to a more distributed energy grid that is supported more and more by IT, OT and IoT.
+We tought it was a good idea to keep track of all these cases in one place, but it didn't work out, we are closing this dossier.
 
 
 ## What we are doing
