With this the build will break again is there is an error in the log

--- a/_cases/2023/DIVD-2023-00022.md
+++ b/_cases/2023/DIVD-2023-00022.md
@@ -23,7 +23,7 @@ versions:
 
 recommendation: "If you have a vulnerable Zyxel product, update to the latest version."
 start: 2023-04-28
-end: 
+end: 2023-12-20
 timeline:
 - start: 2023-04-28
   end:
