--- a/_cases/2023/DIVD-2023-00025.md
+++ b/_cases/2023/DIVD-2023-00025.md
@@ -19,7 +19,7 @@ product: "Danfoss AK-SM800A"
 
 recommendation: "It is recommended by Danfoss to install the latest patch with number 3.3."
 start: 2023-01-18
-end:
+end: 2023-12-20
 timeline:
 - start: 2023-01-18
   end:
