--- a/_cases/2023/DIVD-2023-00037.md
+++ b/_cases/2023/DIVD-2023-00037.md
@@ -18,7 +18,7 @@ patch_status: patches available
 workaround: Enable Browser API Access and disable 'MINIO_BROWSER'
 status: Closed
 start: 2023-09-26
-end: 
+end: 2023-11-30
 timeline:
 - start: 2023-09-26
   end:
@@ -29,7 +29,7 @@ timeline:
 - start: 2023-11-30
   end: 
   event: Case closed because finding a good fingerprint method failed
-
+ips: n/a
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
