--- a/_cases/2024/DIVD-2024-00015.md
+++ b/_cases/2024/DIVD-2024-00015.md
@@ -1,7 +1,7 @@
 ---
 layout: case
-title: Unauthenticated sandbox escape with the ability to read sensitive system files within CrushFTP WebInterface
-excerpt: "CrushFTP has a vulnerability where users can escape their Virtual File System (VFS) and download system files"
+title: Remote Command Execution in CrushFTP
+excerpt: "CrushFTP has a RCE vulnerability that can be exploited without authentication if anonymous web access is enabled"
 author: Stan Plasmeijer
 lead: Stan Plasmeijer
 researchers:
