--- a/_cases/2023/DIVD-2023-00021.md
+++ b/_cases/2023/DIVD-2023-00021.md
@@ -21,7 +21,7 @@ product: "Danfoss AK-EM 100"
 
 recommendation: "It is recommended by Danfoss to phase out the AK-EM 100"
 start: 2023-01-18
-end:
+end: 2023-12-20
 timeline:
 - start: 2023-01-18
   end:
