--- a/_cases/2024/DIVD-2024-00013.md
+++ b/_cases/2024/DIVD-2024-00013.md
@@ -18,7 +18,7 @@ recommendation: "Upgrade to a PAN-OS version where the issue is fixed. The issue
 patch_status: Released
 status : Closed
 start: 2024-04-12
-end: 
+end: 2024-04-23
 timeline:
 - start: 2024-04-12
   end:
