--- a/_cases/2023/DIVD-2023-00032.md
+++ b/_cases/2023/DIVD-2023-00032.md
@@ -3,7 +3,7 @@ layout: case
 title: "Access Control Bypass - CVE-2023-29298 & CVE-2023-38205"
 author: Finn van der Knaap
 lead: Finn van der Knaap
-status: Open
+status: Closed
 excerpt: "Both vulnerabilities allow an attacker to bypass the product feature that restricts external access to the ColdFusion Administrator."
 researchers:
 - Finn van der Knaap
@@ -17,7 +17,7 @@ versions:
 - ColdFusion 2018 <= update 18
 recommendation: "Update to the latest version"
 start: 2023-07-14
-end: 
+end: 2023-08-11
 timeline:
 - start: 2023-07-14
   end: 
@@ -25,6 +25,16 @@ timeline:
 - start: 2023-08-05
   end: 2023-08-08
   event: "publishing casefile"
+- start: 2023-08-11
+  end: 2023-08-11
+  event: "Started scanning for vulnerable instances"
+- start: 2023-08-11
+  end:: 2023-08-11
+  event: "Mail round sent"
+- start: 2023-08-11
+  end: 
+  event: Case closed
+ips: 825
 
 ---
 
