--- a/_cases/2023/DIVD-2023-00032.md
+++ b/_cases/2023/DIVD-2023-00032.md
@@ -30,7 +30,7 @@ timeline:
   event: "Started scanning for vulnerable instances"
 - start: 2023-08-11
   end:: 2023-08-11
-  event: "Mail round sent"
+  event: "Mails sent"
 - start: 2023-08-11
   end: 
   event: Case closed
