--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -3,11 +3,12 @@ layout: case
 title: "Apache Superset authentication bypass leads to RCE - CVE-2023-27524"
 author: Finn van der Knaap
 lead: Finn van der Knaap
-status: Open
+status: Closed
 excerpt: "Apache Superset, up to and including 2.0.1 vulnerable to bypass that can lead to an RCE."
 researchers:
 - Finn van der Knaap
 - Ralph Horn
+- Alwin Warringa
 cves:
 - CVE-2023-27524
 product: Apache Superset
@@ -16,7 +17,7 @@ versions:
 recommendation: "Rotate the SECRET_KEY and update to the latest version"
 workaround: "Rotate the SECRET_KEY by following this article from Apache: [Configuring the SECRET_KEY](https://superset.apache.org/docs/installation/configuring-superset)"
 start: 2023-07-02
-end: 
+end: 2023-07-07
 timeline:
 - start: 2023-07-02
   end: 
@@ -24,13 +25,19 @@ timeline:
 - start: 2023-07-02
   end: 2023-07-02
   event: "publishing casefile"
-
+- start: 2023-07-06
+  end: 2023-07-06
+  event: "Started scanning for vulnerable instances"
+- start: 2023-07-07
+  end:
+  event: "Mails sent"
+  ips: 1023
+  
 ---
 
 ## Summary
 
 Recently, a writeup was posted for a vulnerability, tracked as {% cve CVE-2023-27524 %}, in the open source tool Apache Superset. A default Flask SECRET_KEY is used, this key signs the cookies of user logging in. By default, this key is one of 5 standard keys, which per the software's documentation should be changed. When an attacker knows this key, they can sign their own cookies, as a result the attacker can forge their own cookies to log in as an administrator.
-
 
 
 ## What you can do
