--- a/_cases/2023/DIVD-2023-00032.md
+++ b/_cases/2023/DIVD-2023-00032.md
@@ -20,7 +20,7 @@ start: 2023-07-14
 end: 2023-08-11
 timeline:
 - start: 2023-07-14
-  end: 
+  end: 2023-08-11
   event: "Started research"
 - start: 2023-08-05
   end: 2023-08-08
