--- a/_cases/2023/DIVD-2023-00035.md
+++ b/_cases/2023/DIVD-2023-00035.md
@@ -31,16 +31,10 @@ versions:
 recommendation: Upgrade by installing the issued patch as soon as possible.
 patch_status: patches available
 workaround: Disable J-Web or limit access to trusted devices.
-status : Open
+status : Closed
 start: 2023-09-11
-end: 
+end: 2024-05-06
 timeline:
-- start: 2023-11-29
-  end:
-  event: "DIVD started notifying stakeholders"
-- start: 2023-11-28
-  end:
-  event: "DIVD identified vulnerable devices"
 - start: 2023-09-11
   end:
   event: "DIVD starts scanning for this vulnerability."
@@ -50,7 +44,16 @@ timeline:
 - start: 2023-09-11
   end:
   event: "DIVD starts researching fingerprint"
-# You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
+- start: 2023-11-28
+  end:
+  event: "DIVD identified vulnerable devices"
+- start: 2023-11-29
+  end:
+  event: "DIVD started notifying stakeholders"
+- start: 2024-05-06
+  end:
+  event: "Case closed."
+ips: 2566
 ---
 ## Summary
 
