--- a/_cases/2023/DIVD-2023-00026.md
+++ b/_cases/2023/DIVD-2023-00026.md
@@ -31,6 +31,9 @@ timeline:
 - start: 2023-07-07
   end:
   event: "Mails sent"
+- start: 2023-07-07
+  end:
+  event: "Case closed"  
 ips: 1023
   
 ---
