Closing dossier Energy Transition

--- a/_cases/2022/DIVD-2022-00048.md
+++ b/_cases/2022/DIVD-2022-00048.md
@@ -12,9 +12,9 @@ researchers:
 #versions: "n/a"
 #recommendation: "n/A"
 #patch_status: Available
-status : Open
+status : Closed
 start: 2022-09-07
-end: 
+end: 2024-04-01
 timeline:
 - include: DIVD-2022-00009
 - start: 2022-09-07
@@ -29,17 +29,18 @@ timeline:
   event: Reported credentials for Sharepoint portal of Belgium grid operator leaked via GitHub. Credentials where quickly invalidated and repo has removed.
 - start: 2022-10-27
   event: Case file published
+- start: 2024-04-01
+  event: Case files closed
 ips: n/a
 ---
 
 ## Summary
 
-The global energy transition is in full swing. It leads to a more distributed energy grid that is supported more and more by IT, OT and IoT.
-
+As the global energy transition is in full swing and it leads to a more distributed energy grid that is supported more and more by IT, OT and IoT we tough it was a good idea to track related events. However, this experiment has proven not to be practical, so we closed this dossier.
 
 ## What we are doing
 
-DIVD is using this dossier to track cases and findings that are related to this transition because we beleive this is an important topic.
+This dossier is abandoned.
 
 {% include timeline.html %}
 
