--- a/_cases/2022/DIVD-2022-00048.md
+++ b/_cases/2022/DIVD-2022-00048.md
@@ -23,7 +23,7 @@ timeline:
 - start: 2022-07-04
   event: Reported credentials for Chineeese wind farm management platform leaked via GitHub reported to CN Cert. Passwords have been changed.
 - start: 2022-07-13
-  end: open
+  end:   2024-04-01
   event: DIVD-2022-00039
 - start: 2022-08-27
   event: Reported credentials for Sharepoint portal of Belgium grid operator leaked via GitHub. Credentials where quickly invalidated and repo has removed.
