--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -27,7 +27,7 @@ end:
 timeline:
 - start: 2024-04-30
   end:
-  event: "DIVD starts researching this vulnerability."
+  event: "DIVD starts researching the vulnerabilities."
 - start: 2024-05-01
   end:
   event: "DIVD found a way to fingerprint vulnerable devices"
