--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -36,7 +36,7 @@ timeline:
   event: "DIVD starts scanning the internet for vulnerable instances"
 - start: 2024-05-04
   end:
-  event: "Case opened, first version of this casefile"
+  event: "First version of this casefile"
 #ips: 0
 
 ---
