--- a/_cases/2022/DIVD-2022-00048.md
+++ b/_cases/2022/DIVD-2022-00048.md
@@ -36,7 +36,7 @@ ips: n/a
 
 ## Summary
 
-As the global energy transition is in full swing and it leads to a more distributed energy grid that is supported more and more by IT, OT and IoT we tough it was a good idea to track related events. However, this experiment has proven not to be practical, so we closed this dossier.
+As the global energy transition is in full swing and it leads to a more distributed energy grid that is supported more and more by IT, OT and IoT we tought it was a good idea to track related events. However, this experiment has proven not to be practical, so we closed this dossier.
 
 ## What we are doing
 
