--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -56,9 +56,7 @@ QNAP recommends to upgrade to the latest version, to benefit from vulnerability 
 
 DIVD recommends considering whether it is necessary to have the device listening to the Internet. Firewall rules could possibly be placed in front of the QNAP device so that it can only be accessed from trusted IP addresses. 
 
-Please check also this QNAP page about their security advice:
-
-(https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together) 
+Please check also this QNAP page about their security advice:  [take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet](https://www.qnap.com/en/security-news/2022/take-immediate-actions-to-stop-your-nas-from-exposing-to-the-internet-and-update-qts-to-the-latest-available-version-fight-against-ransomware-together) 
 
 --> Specially have a look at "Step 2: Disable the UPnP function of the QNAP NAS"
 
