Update timeline - DIVD-2024-00016

--- a/_cases/2024/DIVD-2024-00016.md
+++ b/_cases/2024/DIVD-2024-00016.md
@@ -33,10 +33,13 @@ timeline:
   event: "DIVD found a way to fingerprint vulnerable devices"
 - start: 2024-05-04
   end:
-  event: "DIVD starts scanning the internet for vulnerable instances"
+  event: "First version of this casefile"
 - start: 2024-05-04
   end:
-  event: "First version of this casefile"
+  event: "DIVD starts scanning the internet for vulnerable instances"
+- start: 2024-05-23
+  end:
+  event: "First round of notifications sent to about 4000 hosts"
 #ips: 0
 
 ---
