--- a/_cases/2024/DIVD-2024-00020.md
+++ b/_cases/2024/DIVD-2024-00020.md
@@ -49,7 +49,7 @@ The recommended remediation is to upgrade to one of the following versions:
 ## What we are doing
 
 DIVD is currently working to identify vulnerable parties and notify these. We do this by finding GitHub Enterprise servers that are connected to the Internet and verifying their version numbers.
-Parties that are found to be vulnerable will receive a notification with remediation steps.
+Parties that are found to be running a version that contains the vulnerability will receive a notification with remediation steps.
 
 {% include timeline.html %}
 
