--- a/_cases/2024/DIVD-2024-00020.md
+++ b/_cases/2024/DIVD-2024-00020.md
@@ -15,7 +15,7 @@ product:
 - GitHub Enterprise Server
 versions: 
 - All versions prior to 3.13.0
-recommendation: "Upgrade to versions 3.9.15, 3.10.12, 3.11.10, or 3.12.4 to remediate the vulnerability."
+recommendation: "Upgrade to versions 3.9.15, 3.10.12, 3.11.10, 3.12.4, or 3.13.0 to remediate the vulnerability."
 patch_status: Released
 status : Open
 start: 2024-05-27
