--- a/_cases/2024/DIVD-2024-00020.md
+++ b/_cases/2024/DIVD-2024-00020.md
@@ -49,7 +49,9 @@ The recommended remediation is to upgrade to one of the following versions:
 
 ## What we are doing
 
-DIVD is currently working to identify vulnerable parties and notify these. We do this by finding GitHub Enterprise servers that are connected to the Internet and verifying their version numbers.
+DIVD is currently working to identify parties that are running a version of GitHub Enterprise Server that contains this vulnerability and notify these parties. We do this by finding GitHub Enterprise servers that are connected to the Internet and verifying their version numbers.
+
+Unfortunately we cannot identify remotely if SAML is used and/or if it is configure with the `encrypted assertions` feature.
 Parties that are found to be running a version that contains the vulnerability will receive a notification with remediation steps.
 
 {% include timeline.html %}
