--- a/_cases/2024/DIVD-2024-00019.md
+++ b/_cases/2024/DIVD-2024-00019.md
@@ -1,12 +1,11 @@
 ---
 layout: case
 # Title and excerpt will be used on /cases and the RSS feed so make sure they reflect the case well
-title: Victim notification Operation Endgame
-excerpt: "The DIVD is notifying victims of several botsnets, based on information obtained for the Dutch Police's Operation Endgame"
+title: Victim Notification Operation Endgame
+excerpt: "The DIVD is notifying victims of several botnets, based on information obtained from the Dutch National Police's Operation Endgame"
 author: DIVD CSIRT
 lead: Frank Breedijk
 researchers:
-- Ralph Horn
 - Max van der Horst
 - Lennaert Oudshoorn
 - Frank Breedijk
@@ -19,28 +18,31 @@ product:
 #versions: 
 #- All versions
 #- Again one per line
-recommendation: If you received a notification from us, members of your organisation, your customers had their password stolen or system infected by a botnet. Detailed recommendations are found below.
-#patch_status: Full patched
+recommendation: If you received a notification from us, members of your organization or your customers had their password stolen or system infected by a botnet. Detailed recommendations are found below.
+#patch_status: Fully patched
 #workaround: n/a
 status : Open
 start: 2024-05-30
 end: 
 timeline:
 - start: 2023-12-01
-  end: 2023-05-30
-  event: "Period in which credentials were likely abused/harvested by the threat actor"
+  end: 2024-05-30
+  event: "Period in which credentials were likely actively abused by the threat actors"
 - start: 2024-05-30
   end:
-  event: "Dutch police goes public with Operation Endgame"
+  event: "Dutch National Police goes public with Operation Endgame"
+- start: 2024-05-30
+  end: open
+  event: "DIVD sends out first notifications"
 ips: n/a
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
 ## Summary
 
-As part of [Operation Endgame](https://www.politie.nl/xxx) the Dutch Police and [Europol](https://www.europol.europa.eu/publications-events/main-reports/xxx) have infiltrated a number of botnets. During this infiltration they obtained data about the victims of these botnets. 
+As part of [Operation Endgame](https://www.politie.nl/endgame), the biggest anti-botnet operation to date. The Dutch Police, in cooperation with policy units form Germany, France, Denmark, the United States and United Kingdom and suppor to Europol and Eurojust have infiltrated a number of botnets, including at least `Smokeloader`, `IcedId`, `Pikabot`, `SystemBC` and `Bumblebee`. During this infiltration they obtained data about the victims of these botnets. 
 
-This data has been shared with us and various other parties like [Have I Been Pwned] (https://haveibeenpwned.com/) ,[Spam House] (https://spamhouse.org), [Project No More Leaks] (https://www.politie.nl/onderwerpen/no-more-leaks.html), the (Dutch) [ NCSC] (https://nsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center] (https://www.digitaltrustcenter.nl/).
+This data has been shared with us and various other parties like [Have I Been Pwned](https://haveibeenpwned.com/), [Spam House](https://spamhouse.org), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
 The data we have received consists of the following data sets:
 1. Email credentials, either SMTP or IMAP credentials
@@ -49,29 +51,94 @@ The data we have received consists of the following data sets:
 
 ## What you can do
 
-Upon receiving a notification about compromised credentials, make sure to change the mentioned password for all accounts it is used on. Moreover, because the credentials were obtained with Information Stealer malware, make sure to review your system for any malicious software.
+What you can do depends on who you are and the type of data the police found.To keep this main case page brief, we have created separate pages with recommendations for your situation.
 
-Give as much direct actions as you can either in a story obut:
-* Bullits
-* Are
-* Ok
+You have received a notification that is only about your personal accounts:
+* Click on [this link if you have received a notification about your own email account](/DIVD-2024-00019/personal-email-account/)
+{%- comment -%}
+* Click on [this link if you have received a notification about your own ADFS account](/DIVD-2024-00019/personal-adfs-account/)
+{%- endcomment %}
+* Click on [this link if you have received a notification about personal accounts of an unspecified nature](/DIVD-2024-00019/personal-unclassified-account/)
+
+You have received a notification about a number of accounts that belong to your organization:
+* [Recommendations for organization email accounts](/DIVD-2024-00019/organisation-email-accounts/)
+* [Recommendations for organization ADFS accounts](/DIVD-2024-00019/organisation-adfs-accounts/)
+* [Recommendations for organization accounts of unspecified nature](/DIVD-2024-00019/organisation-unclassified-accounts/)
 
 ## What we are doing
 
-DIVD has analyzed the dataset and is currently notifying victims of any compromised accounts. Email addresses that were found in the dataset receive an email with the found email address, a masked password only showing the last four characters, and a set of recommendations to prevent subsequent compromise.
+We have received the discovered data from the police, and are sending out notification to individuals and organizations that have fallen victim to compromise. To effectively do this, we are in close cooperation with the Dutch National Police as well as the NCSC, CSIRT-DSP and DTC.
 
-What are our actions, what are we doing. could be a story, but:
-* Bullits
-* Are
-* Ok
+## Frequently asked questions 
 
-{% comment %}  Leave this here, so we see a timeline{% endcomment %}
+### General
+
+---
+
+**Q: Is this a scam?**
+
+A: It’s great that you’re skeptical. However, this is legit and definitely not a scam. This operation is a collaboration between the Dutch National Police, Europol, Digital Trust Center, NCSC and others. We, Dutch Institute of Vulnerability Disclosure (DIVD), are mentioned in the press releases from [the Dutch Police](https://www.politie.nl/endgame) and Europol. The ['Check je Hack. (translation: Check your Hack)](https://www.politie.nl/informatie/veel-gestelde-vragen-over-check-je-hack.html) FAQ also mentiones DIVD and shares a link back to this casefile. 
+
+---
+
+**Q: Do you have my password?**
+
+A:No, we do not have your password. 
+We may have sent you an email containing a partial password, with only the last four characters visible. This is the only part of your password we possess because the Dutch Police ensured that all passwords were hidden before sharing the data with us.
+
+---
+
+**Q: Are you going to go after the criminals who stole my information?**
+
+A:No, we are not. That is a matter for law enforcement. As per [article 9 of our code of conduct](https://www.divd.nl/code): `We analyze online threats, not threat actors. We are researchers and don’t serve the needs of governments or law enforcement.`
+
+---
+
+**Q: if you “don’t serve the needs of governments or law enforcement”, why are you cooperating with the Dutch National Police on this case?**
+
+
+A: Acting on this data set is directly in line with article 3 of our [code of conduct](https://www.divd.nl/code): `Analyze databases with leaked credentials and report to the organizations or people who are compromised to take appropriate measures.`
+
+We analyze every database we receive, including those from law enforcement. However, we do this independently, without any obligation or intention to share any specific information in return.
+
+
+
+### Technical
+
+---
+
+**Q: What is an ADFS account and what can criminals do with it?**
+
+A: An [ADFS (Active Directory Federation Services)](https://en.wikipedia.org/wiki/Active_Directory_Federation_Services) account enables single sign-on for multiple applications. If criminals access it, they can infiltrate corporate systems, cloud services, and email accounts, leading to the theft of sensitive data and potential further attacks within the organization.
+
+---
+
+**Q: Do you know how the Dutch National Police obtained this information?**
+
+A: No we don’t know any details, but we know that Operation Endgame contains information from several botnets.
+
+---
+
+**Q:  Do you know from which botnet my data was obtained?**
+
+A: No, those details were not shared with us.
+
+---
+
+### Legal
+
+**Q: You are processing my personal data without my consent, is that legal?**
+
+A: Yes it is.Under Dutch law and European privacy regulations, we can process this data based on a so-called "legitimate interest."DIVD is a private foundation that operates under a strict [code of conduct](https://www.divd.nl/code), with the aim to make the digital world safer. 
+
+---
+
+{% comment %}  Leave this here, so we see a timeline. {% endcomment %}
 {% include timeline.html %}
 
 
 ## More information
-* List all resources here
-* [Blog from Grafana](https://grafana.com/blog/2021/12/08/an-update-on-0day-cve-2021-43798-grafana-directory-traversal/)
-* [CVE-2021-43798](https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-43798)
+* [Press release on site of Dutch police](https://www.politie.nl/endgame)
+* [Operation Endgame website](https://www.operation-endgame.com)
 
 
