Reference updates Endgame

--- a/_cases/2024/DIVD-2024-00019.md
+++ b/_cases/2024/DIVD-2024-00019.md
@@ -137,6 +137,8 @@ A: Yes it is.Under Dutch law and European privacy regulations, we can process th
 
 ## More information
 * [Press release on site of Dutch police](https://www.politie.nl/endgame)
+* [Europol press release](https://www.europol.europa.eu/media-press/newsroom/news/largest-ever-operation-against-botnets-hits-dropper-malware-ecosystem)
+* [Article by Troy Hunt of haveibeenpwned](https://www.troyhunt.com/operation-endgame/)
 * [Operation Endgame website](https://www.operation-endgame.com)
 
 
