--- a/_cases/2024/DIVD-2024-00019.md
+++ b/_cases/2024/DIVD-2024-00019.md
@@ -42,7 +42,7 @@ ips: n/a
 
 As part of [Operation Endgame](https://www.politie.nl/endgame), the biggest anti-botnet operation to date. The Dutch Police, in cooperation with policy units form Germany, France, Denmark, the United States and United Kingdom and suppor to Europol and Eurojust have infiltrated a number of botnets, including at least `Smokeloader`, `IcedId`, `Pikabot`, `SystemBC` and `Bumblebee`. During this infiltration they obtained data about the victims of these botnets. 
 
-This data has been shared with us and various other parties like [Have I Been Pwned](https://haveibeenpwned.com/), [Spam House](https://spamhouse.org), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
+This data has been shared with us and various other parties like [Have I Been Pwned](https://haveibeenpwned.com/), [Spam House](https://spamhause.org), [Project No More Leaks](https://www.politie.nl/onderwerpen/no-more-leaks.html), [Project Check je Hack](https://www.politie.nl/informatie/checkjehack.html), the (Dutch) [NCSC](https://ncsc.nl),  [CSIRT-DSP](https://csirtdsp.nl/), and [Digital Trust Center](https://www.digitaltrustcenter.nl/).
 
 The data we have received consists of the following data sets:
 1. Email credentials, either SMTP or IMAP credentials
@@ -139,6 +139,6 @@ A: Yes it is.Under Dutch law and European privacy regulations, we can process th
 * [Press release on site of Dutch police](https://www.politie.nl/endgame)
 * [Europol press release](https://www.europol.europa.eu/media-press/newsroom/news/largest-ever-operation-against-botnets-hits-dropper-malware-ecosystem)
 * [Article by Troy Hunt of haveibeenpwned](https://www.troyhunt.com/operation-endgame/)
-* [Operation Endgame website](https://www.operation-endgame.com)
+* [Operation Endgame website](https://www.operation-endgame.com`)
 
 
