--- a/_cases/2024/DIVD-2024-00021.md
+++ b/_cases/2024/DIVD-2024-00021.md
@@ -5,7 +5,7 @@ layout: case
 title: "Local File Inclusion in Check Point Security Gateway software"
 author: Alwin Warringa
 lead: Alwin Warringa
-excerpt: "An unauthenticed local file inclusion vulnerability was present in Check Point Security Gateway software"
+excerpt: "An unauthenticated local file inclusion vulnerability was present in Check Point Security Gateway software"
 researchers:
 - Stan Plasmeijer
 - Alwin Warringa
