--- a/_cases/2024/DIVD-2024-00021.md
+++ b/_cases/2024/DIVD-2024-00021.md
@@ -28,8 +28,14 @@ timeline:
 - start: 2024-05-30
   end:
   event: "DIVD finds fingerprint, preparing to scan."
+- start: 2024-05-31
+  end:
+  event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-05-31
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
 
-#ips: 0
+#ips: 9819
 
 ---
 ## Summary
