--- a/_cases/2022/DIVD-2022-00055.md
+++ b/_cases/2022/DIVD-2022-00055.md
@@ -4,7 +4,7 @@ title: "Server Management Interfaces security issues"
 excerpt: "DIVD is researching vulnerabilities in (hardware) server management interfaces globally and notifying the owners of misconfigured services."
 author: Pepijn van der Stap
 lead: Pepijn van der Stap
-status: Open
+status: Closed
 researchers:
 - Tom Wolters
 - Pepijn van der Stap
@@ -15,7 +15,7 @@ versions: any. For hardware it depends on the firmware shipped by the hardware v
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in the notification."
 patch_status: n/a
 start: 2022-10-08
-end: 
+end: 2023-01-08
 timeline:
 - start: 2022-10-08
   end:
@@ -32,7 +32,10 @@ timeline:
 - start: 2023-01-08
   end:
   event: DIVD performs another worldwide scan for vulnerable management interfaces, informing the owners of the affected servers and shares relevant data with Digital Trust Center & het Nederlands Security Meldpunt.
-ips: n/a
+- start: 2024-06-01
+  end:
+  event: Case closed.
+ips: 1974
 
 ---
 
