--- a/_cases/2022/DIVD-2022-00061.md
+++ b/_cases/2022/DIVD-2022-00061.md
@@ -3,7 +3,7 @@ layout: case
 title: "KNXNet/IP gateways often left open to the internet"
 author: Pepijn van der Stap
 lead: Pepijn van der Stap
-status: Open
+status: Closed
 excerpt: DIVD is scanning for and notifying parties about KNXNet/IP gateways that are accessible from the internet.
 researchers:
 - Daan Keuper
@@ -19,7 +19,7 @@ versions: N/A
 recommendation: "Close the port(s) that are used for KNXNet/IP communication, often port 3671. If you are using a KNXNet/IP gateway, ensure that it is not accessible from the internet."
 workaround: "If you are using a KNXNet/IP gateway, make sure that it is not accessible via the internet, for example by re-configuring the router to announce these routes only to the local network."
 start: 2022-02-08
-end:
+end: 2023-04-31
 timeline:
 - start: 2022-02-08
   end:
@@ -36,6 +36,13 @@ timeline:
 - start: 2022-12-02
   end:
   event: "DIVD releases a first version of this case file and starts scanning for vulnerable parties"
+- start: 2023-04-31
+  end:
+  event: "DIVD started notifying vulnerable parties"
+- start: 2024-06-01
+  end:
+  event: "Case closed"
+ips: 15740
 
 ---
 
