Closing crushftp cases

--- a/_cases/2024/DIVD-2024-00015.md
+++ b/_cases/2024/DIVD-2024-00015.md
@@ -17,9 +17,9 @@ versions:
 - All versions below V10.7.1 and v11.1.0 are affected.
 recommendation: "CrushFTP recommends updating all versions within the v10 range to version v10.7.1. Additionally, all versions below v11.1.0 should be upgraded to v11.1.0. CrushFTP advises companies still using v9 to immediately upgrade to v11."
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-04-23
-end: 
+end: 2024-06-01
 timeline:
 - start: 2024-04-23
   end:
@@ -35,8 +35,23 @@ timeline:
   event: "Case opened, first version of this casefile"
 - start: 2024-04-23
   end:
-  event: "DIVD starts notifying network owners with a vulnerable instance in their network."
-#ips: 0
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network"
+- start: 2024-05-07
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-05-07
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2024-06-01
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-06-01
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the third time"
+- start: 2024-06-01
+  end:
+  event: "Case closed"
+ips: 1204
 
 ---
 ## Summary
