--- a/_cases/2024/DIVD-2024-00003.md
+++ b/_cases/2024/DIVD-2024-00003.md
@@ -15,24 +15,33 @@ versions: all versions prior to 10.5.1
 recommendation: "Upgrade to patched versions stated on CrushFTP website"
 patch_status: "Patch available"
 workaround: "Restrict access to the webinterface of CrushFTP."
-status : Open
+status : Closed
 start: 2023-12-13
-end: 
+end: 2024-04-17
 timeline:
 - start: 2023-12-13
   end:
   event: "DIVD receives signals about a vulnerability in CrushFTP and starts fingerprinting."
 - start: 2024-01-15
   end:
-  event: DIVD identified vulnerable devices
+  event: "DIVD identified vulnerable devices"
 - start: 2024-01-24
   end:
-  event: Case opened, first version of this casefile.
+  event: "Case opened, first version of this casefile"
+- start: 2024-04-17
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-04-17
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2024-06-01
+  end:
+  event: "Case closed"
 
-#ips: 
-# ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
-# This field becomes mandatory when the case status is set to 'Closed'
+ips: 310 
+
 ---
+
 ## Summary
 {% cve CVE-2023-43177 %} is a critical vulnerability in CrushFTP. The vulnerability could potentially allow unauthenticated attackers with network access to the CrushFTP Instance to write files in the local file system and eventually in some versions could allow the executing of arbitrary system commands. 
 
