--- a/_cases/2024/DIVD-2024-00008.md
+++ b/_cases/2024/DIVD-2024-00008.md
@@ -32,9 +32,22 @@ timeline:
 - start: 2024-02-21
   end:
   event: "DIVD starts notifying network owners with a vulnerable instance in their network."
-#ips: 0
-# ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
-# This field becomes mandatory when the case status is set to 'Closed'
+- start: 2024-05-07
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-05-07
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2024-06-01
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-06-01
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the third time"
+- start: 2024-06-01
+  end:
+  event: "Case closed"
+ips: 1194
 
 ---
 ## Summary
