apparently didn't close it..

--- a/_cases/2024/DIVD-2024-00008.md
+++ b/_cases/2024/DIVD-2024-00008.md
@@ -16,9 +16,9 @@ versions:
 - ScreenConnect 23.9.7 and prior.
 recommendation: "ConnectWise recommends partners to update their ScreenConnect to version 23.9.8."
 patch_status: Released
-status : Open
+status : Closed
 start: 2024-02-21
-end: 
+end: 2024-06-01
 timeline:
 - start: 2024-02-21
   end:
