Endgame - Case file update for IcedId

--- a/_cases/2024/DIVD-2024-00019.md
+++ b/_cases/2024/DIVD-2024-00019.md
@@ -57,11 +57,15 @@ You have received a notification that is only about your personal accounts:
 * Click on [this link if you have received a notification about your own email account](/DIVD-2024-00019/personal-email-account/)
 * Click on [this link if you have received a notification about your own ADFS account](/DIVD-2024-00019/personal-adfs-account/)
 * Click on [this link if you have received a notification about personal accounts of an unspecified nature](/DIVD-2024-00019/personal-unclassified-account/)
+* Click on [this link if you have received a notification about personal accounts that have been found in the IcedID botnet](/DIVD-2024-00019/personal-icedid-account/)
+
 
 You have received a notification about a number of accounts that belong to your organization:
 * [Recommendations for organization email accounts](/DIVD-2024-00019/organisation-email-accounts/)
 * [Recommendations for organization ADFS accounts](/DIVD-2024-00019/organisation-adfs-accounts/)
 * [Recommendations for organization accounts of unspecified nature](/DIVD-2024-00019/organisation-unclassified-accounts/)
+* [Recommendations for organization with systems that connected with the IcedID botnet](/DIVD-2024-00019/organisation-icedid-bot/)
+
 
 ## What we are doing
 
