--- a/_cases/2024/DIVD-2024-00023.md
+++ b/_cases/2024/DIVD-2024-00023.md
@@ -14,7 +14,8 @@ product:
 - Telerik Report Server
 versions: 
 - version 2024 Q1 (10.0.24.305) or earlier
-recommendation: "Update to 2024 Q2 (10.1.24.514) or apply a temporary mitigation"
+recommendation: "Update your Telerik Report Server to 2024 Q2 (10.1.24.514)"
+workaround: "Use the URL Rewrite module of IIS to block access to the startup/register functionality."
 patch_status: Released
 status : Open
 start: 2024-06-04
@@ -48,7 +49,7 @@ Both vulnerabilities combined can lead to an unauthenticated attacker achieving 
 
 ## Recommendations
 
-Telerik recommends updating to the latest version of Telerik Report Server, which is 2024 Q2 (10.1.24.514). For updating to the latest version see https://docs.telerik.com/report-server/implementer-guide/setup/upgrade.
+Telerik recommends updating to the latest version of Telerik Report Server, which is 2024 Q2 (10.1.24.514). For updating to the latest version see [this Telerik knowledge base article](https://docs.telerik.com/report-server/implementer-guide/setup/upgrade).
 
 Telerik also recommends to review your Report Server's users list for any new Local users you have not added at `{host}/Users/Index`.
 
