--- a/_cases/2024/DIVD-2024-00026.md
+++ b/_cases/2024/DIVD-2024-00026.md
@@ -3,7 +3,7 @@ layout: case
 title: "Unauthenticated RCE in Rejetto HTTP File Server"
 author: Boaz Braaksma
 lead: Stan Plasmeijer
-excerpt: "In Rejetto HTTP File Server, version 2.3x up to 2.4 RC07, an vulnerability exists that allows a remote, unauthenticated attacker to execute arbitrary commands on the affected system by sending a specially crafted HTTP request. This vulnerability affects both the Windows and Wine versions.
+excerpt: "In Rejetto HTTP File Server, version 2.3x up to 2.4 RC07, an vulnerability exists that allows a remote, unauthenticated attacker to execute arbitrary commands on the affected system by sending a specially crafted HTTP request. This vulnerability affects both the Windows and Wine versions."
 researchers:
 - Stan Plasmeijer
 - Wessel Baltus
