--- a/_cases/2024/DIVD-2024-00002.md
+++ b/_cases/2024/DIVD-2024-00002.md
@@ -25,9 +25,9 @@ versions:
 recommendation: "Patch your Gitlab instance to the non vulnerable version"
 patch_status: Released
 
-status : Open
+status : Closed
 start: 2024-01-12
-end: 
+end: 2024-06-01
 timeline:
 - start: 2024-01-12
   end:
@@ -40,15 +40,30 @@ timeline:
   event: “Case opened, first version of this casefile."
 - start: 2024-01-15
   end:
-  event: “DIVD starts notifying customers with a vulnerable instance. "
-#ips: 
+  event: “DIVD starts notifying customers with a vulnerable instance."
+- start: 2024-05-07
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-05-07
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the second time"
+- start: 2024-06-01
+  end:
+  event: "DIVD rescans the internet for vulnerable instances"
+- start: 2024-06-01
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance for the third time"
+- start: 2024-06-01
+  end:
+  event: "Case closed"
+ips: 7530
+
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
 ## Summary
  
 An account takeover vulnerability via password reset without any user interactions was discovered in Gitlab CE/EE. This vulnerability is tracked as CVE-2023-7028 and can allow an attacker to take control over administrator accounts. Gitlab has released a patch to remediate the vulnerability. This vulnerability is currently exploited in the wild.
-
  
 ## What you can do
 Given that there is active exploitation, it is crucial to patch the system as soon as possible. Gitlab recommends patching the system and enabling Two-Factor Authentication (2FA) for all GitLab accounts.
@@ -59,9 +74,7 @@ DIVD is currently working to identify vulnerable instances and notify the owners
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
  
- 
 ## More information
 * [Gitlab Publication](https://about.gitlab.com/releases/2024/01/11/critical-security-release-gitlab-16-7-2-released/)
 * [BleepingComputer Blogpost](https://www.bleepingcomputer.com/news/security/gitlab-warns-of-critical-zero-click-account-hijacking-vulnerability/)
 * {% cve CVE-2023-7028 %}
-
