Updated casefile DIVD-2024-00026

--- a/_cases/2024/DIVD-2024-00026.md
+++ b/_cases/2024/DIVD-2024-00026.md
@@ -33,6 +33,9 @@ timeline:
 - start: 2024-06-10
   end:
   event: "DIVD starts scanning the internet for vulnerable instances."
+- start: 2024-06-11
+  end:
+  event: "DIVD starts notifying network owners with a vulnerable instance in their network"
 # ips: 0
 
 ---
