--- a/_cases/2022/DIVD-2022-00065.md
+++ b/_cases/2022/DIVD-2022-00065.md
@@ -38,9 +38,9 @@ models:
 recommendation: Retire impacted devices
 patch_status: “Devices are end-of-life and will not be patched”
 #workaround: n/a
-status : Open
+status : Closed
 start: 2022-12-19
-end: 
+end: 2023-07-20
 timeline:
 - start: 2022-02-15
   end:
@@ -57,7 +57,13 @@ timeline:
 - start: 2023-05-25
   end: 2023-05-31
   event: "DIVD rescans and notifies owners/operators of EOL devices that are still found to be operational"
-#ips: 500
+- start: 2023-07-20
+  end: 2023-07-20
+  event: "Final re-scan"
+- start: 2023-07-20
+  end: 2023-07-20
+  event: "Closing case"
+ips: 500
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
