--- a/_cases/2023/DIVD-2023-00027.md
+++ b/_cases/2023/DIVD-2023-00027.md
@@ -4,7 +4,7 @@ title: "Ignite Realtime Openfire auth bypass - CVE-2023-32315"
 author: Hans Meuris 
 Co-authored-by: Frank Breedijk <frank@breedijk.net>
 lead: Hans Meuris
-status: Open
+status: Closed
 excerpt: "Ignite Realtime Openfire version 3.10.0 through 4.6.8 (excluded) and 4.7.0 to 4.7.5 (excluded) are vulnerable to a Path traversal vulnerability"
 researchers:
 - Hans Meuris
@@ -18,7 +18,7 @@ versions:
 recommendation: "Update your system to the latest version"
 workaround: "See vendor writeup: https://github.com/igniterealtime/Openfire/security/advisories/GHSA-gw42-f939-fhvmA"
 start: 2023-06-23
-end: 
+end: 2023-09-06
 timeline:
 - start: 2023-06-23
   end: 
@@ -35,6 +35,10 @@ timeline:
 - start: 2023-07-09
   end: 
   event: "mailrun"
+- start: 2023-09-06
+  end: 
+  event: "Case closed"
+ips: 690 
 ---
 
 ## Summary
