--- a/_cases/2023/DIVD-2023-00030.md
+++ b/_cases/2023/DIVD-2023-00030.md
@@ -24,9 +24,9 @@ versions:
 recommendation: Update your system to the latest patched version
 patch_status: Fully patched
 #workaround: n/a
-status : Open
+status : Closed
 start: 2023-07-18
-end: 
+end: 2023-07-24
 timeline:
 - start: 2023-07-18
   end:
@@ -34,6 +34,10 @@ timeline:
 - start: 2023-07-19
   end:
   event: "DIVD starts notifying owners of vulnerable systems"  
+- start: 2023-07-24
+  end:
+  event: "Case Closed"  
+ips: 5189
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
 ## Summary
