--- a/_cases/2024/DIVD-2024-00001.md
+++ b/_cases/2024/DIVD-2024-00001.md
@@ -23,9 +23,9 @@ versions:
 recommendation: "While the patch is under development, apply Ivanti’s mitigation, or take the appliance offline."
 patch_status: Under development
 workaround: Import the mitigation file mitigation.release.20240107.1.xml provided by Ivanti in the download portal or take the device offline.
-status : Open
+status : Closed
 start: 2024-01-10
-end: 
+end: 2024-02-12
 timeline:
 - start: 2024-01-10
   end:
@@ -36,11 +36,20 @@ timeline:
 - start: 2024-01-10
   end:
   event: Case opened, first version of this casefile.
+- start: 2024-01-15
+  end:
+  event: DIVD informs its trusted information sharing partners about vulnerable systems.
 - start: 2024-01-17
   end:
   event: Scanning with new method that exploits authentication bypass.
+- start: 2024-01-18
+  end:
+  event: DIVD informs the owners of vulnerable systems. 
+- start: 2024-02-12
+  end:
+  event: Case closed.
 
-#ips: 
+ips: 522 
 # ips is used for statistics after the case is closed. If it is not applicable, you can set IPs to n/a (e.g. stolen credentials)
 # This field becomes mandatory when the case status is set to 'Closed'
 ---
